# UnotUI

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.MD  README.md
code/: CMakeLists.txt
code/_dependencies/: CMakeLists.txt
code/entities/: CMakeLists.txt  ent_application.h
code/entities/widgets/: CMakeLists.txt
code/events/: widget_event.cpp  widget_event.h
code/systems/: systems.cpp  systems.h
code/unotui/: CMakeLists.txt  coordinates.h  types.cpp
code/unotui/_dependencies/: CMakeLists.txt
code/unotui/_dependencies/glew-2.1.0/: glew.pc
code/unotui/entities/: CMakeLists.txt  ent_application.cpp  ent_application.h  ent_opengl.cpp  ent_opengl.h  ent_tab.cpp  ent_tab.h  ent_window.cpp  ent_window.h  entity.h
code/unotui/systems/: callbacks.cpp  callbacks.h  systems.cpp  systems.h
code/unotui/utility/: CMakeLists.txt  clipboard.cpp  clipboard.h  colors.h  coordinates.h  debug.cpp  debug.h  dpoint.cpp  dpoint.h  font_symbols.h  fpoint.cpp  fpoint.h  general.cpp  general.h  ipoint.cpp  ipoint.h  packed_data.h  point.cpp  point.h  shortcuts.cpp  shortcuts.h  text.cpp  text.h  types.cpp  types.h  unit.cpp  unit.h  widget.cpp  widget.h  window.cpp  window.h
code/unotui/utility/classes/: CMakeLists.txt  simple_timer.cpp  simple_timer.h
code/unotui/workers/: CMakeLists.txt  interface_worker.cpp  interface_worker.h  widget_worker.cpp  widget_worker.h  window_worker.cpp  window_worker.h
code/utility/: CMakeLists.txt
code/workers/: window_worker.cpp
data/: CMakeLists.txt  packed_data.s
data/fonts/: consolas.xcf
include/: unotui  unotui.h
(+53 files in other folders)
